--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        background: #38302d;
       }
       .spinner {
         width: 157.5px;
